# maio-quantum-lock

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: desktop.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/landing/: LabSection.jsx
src/lib/: crypto.js
src/pages/: Index.jsx
src/test/: crypto.test.ts  setup.ts
