[package]
name = "maio-quantum-box"
version = "0.0.0"
description = "A local encryption tool wrapped as a native desktop app."
authors = ["Maio"]
edition = "2021"

[lib]
name = "maio_quantum_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
